# stochastic-biopolymers

./: .gitignore  prefdir.inp  pyproject.toml
modules/: global_read_py.f90  py_anl_ai.f90
notebooks/: filaments_aux.ipynb  pce_aux.ipynb  umat_aux.ipynb
run_7091/: aaaaa.eps  abaqus.rpy  abaqus.rpy.2  abaqus.rpy.3  abaqus.rpy.4  abaqus.rpy.5  final0_00.eps  final0_00_mmmm.eps  final0_01.eps  final0_10.eps  final0_11.eps  final1_0.eps  final1_1.eps  gel_rheometer.inp  horiz.eps  lightcolor_0.eps  material_inp7091.inp  neweps.eps  no_rp.eps  output.pkl  pizza_slice.eps  pizza_slice_zoom.eps
scripts/: build.py  pce_run.py  simulation_run.py
src/stochastic_biopolymers/: abaqus.py  filament.py  network.py  pce_model.py  sampler.py  simulation_manager.py
src/umat/: GETOUTDIR.f90  _global.f90  _umat_.f90  _umat_det.f90  _umat_rnd_.f90  affclnetfic_discrete.f90  cmatisomatfic.f90  density.f90  erfi.f90  fil.f90  filpce.f90  fslip.f90  getprops_gp.f90  global.mod  identity_tensors.f90  initialize.f90  pk2vol.f90  random.f90  random_nor.f90  sdvwrite.f90  uexternaldb.f90
test_in_abaqus/: glb_py.f90  rheometer_generator_original.py  umat_anl_ai.f
