[tool.poetry]
name = "stochastic-biopolymers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stochastic_biopolymers", from = "src"},
           {include = "modules"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.0"
meson = "^1.8.2"
ninja = "^1.11.1.4"
ipykernel = "^6.29.5"
pandas = "^2.3.0"
scipy = "^1.15.3"
chaospy = "^4.3.18"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"
seaborn = "^0.13.2"
sympy = "^1.14.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
